// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginGrid should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Explorer
            </div>
            <div>
              <div
                class="sc-AxirZ hPsuTj"
                height="16"
                width="16"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 80%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  4.2
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="absolute top-4 right-2 text-theme-primary-200"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right outline-none cursor-pointer focus:outline-none"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Avatars
            </div>
            <div>
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-AxhCb gSLQTX mt-5"
      data-testid="Pagination"
    >
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__first"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ hDwaov"
          height="12"
          width="12"
        >
          <svg>
            pagination-first.svg
          </svg>
        </div>
      </button>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__previous"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ fttODj mr-2"
          height="10"
          width="10"
        >
          <svg>
            back.svg
          </svg>
        </div>
        Previous
      </button>
      <div
        class="flex px-2 rounded bg-theme-primary-contrast"
      >
        <div
          class="sc-AxhUy bxYQX current-page"
        >
          1
        </div>
      </div>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__next"
        disabled=""
        type="button"
      >
        Next
        <div
          class="sc-AxirZ hDwaov ml-2"
          height="12"
          width="12"
        >
          <svg>
            forward.svg
          </svg>
        </div>
      </button>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__last"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ hDwaov"
          height="12"
          width="12"
        >
          <svg>
            pagination-last.svg
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should render without pagination 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Explorer
            </div>
            <div>
              <div
                class="sc-AxirZ hPsuTj"
                height="16"
                width="16"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 80%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  4.2
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="absolute top-4 right-2 text-theme-primary-200"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right outline-none cursor-pointer focus:outline-none"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Avatars
            </div>
            <div>
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should split by page 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="absolute top-4 right-2 text-theme-primary-200"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right outline-none cursor-pointer focus:outline-none"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Avatars
            </div>
            <div>
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-AxhCb gSLQTX mt-5"
      data-testid="Pagination"
    >
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__first"
        type="button"
      >
        <div
          class="sc-AxirZ hDwaov"
          height="12"
          width="12"
        >
          <svg>
            pagination-first.svg
          </svg>
        </div>
      </button>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__previous"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj mr-2"
          height="10"
          width="10"
        >
          <svg>
            back.svg
          </svg>
        </div>
        Previous
      </button>
      <div
        class="flex px-2 rounded bg-theme-primary-contrast"
      >
        <div
          class="sc-AxhUy bxYQX"
        >
          1
        </div>
        <div
          class="sc-AxhUy bxYQX current-page"
        >
          2
        </div>
      </div>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__next"
        disabled=""
        type="button"
      >
        Next
        <div
          class="sc-AxirZ hDwaov ml-2"
          height="12"
          width="12"
        >
          <svg>
            forward.svg
          </svg>
        </div>
      </button>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__last"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ hDwaov"
          height="12"
          width="12"
        >
          <svg>
            pagination-last.svg
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger delete 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Explorer
            </div>
            <div>
              <div
                class="sc-AxirZ hPsuTj"
                height="16"
                width="16"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 80%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  4.2
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="absolute top-4 right-2 text-theme-primary-200"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right outline-none cursor-pointer focus:outline-none"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Avatars
            </div>
            <div>
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-AxhCb gSLQTX mt-5"
      data-testid="Pagination"
    >
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__first"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ hDwaov"
          height="12"
          width="12"
        >
          <svg>
            pagination-first.svg
          </svg>
        </div>
      </button>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__previous"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ fttODj mr-2"
          height="10"
          width="10"
        >
          <svg>
            back.svg
          </svg>
        </div>
        Previous
      </button>
      <div
        class="flex px-2 rounded bg-theme-primary-contrast"
      >
        <div
          class="sc-AxhUy bxYQX current-page"
        >
          1
        </div>
      </div>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__next"
        disabled=""
        type="button"
      >
        Next
        <div
          class="sc-AxirZ hDwaov ml-2"
          height="12"
          width="12"
        >
          <svg>
            forward.svg
          </svg>
        </div>
      </button>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__last"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ hDwaov"
          height="12"
          width="12"
        >
          <svg>
            pagination-last.svg
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginGrid should trigger select 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginGrid"
  >
    <div
      class="grid grid-cols-4 gap-5 undefined"
    >
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-explorer"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Explorer
            </div>
            <div>
              <div
                class="sc-AxirZ hPsuTj"
                height="16"
                width="16"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 80%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  4.2
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="sc-AxheI jEitmk border-theme-primary-100 hover:border-theme-background"
        data-testid="PluginCard--ark-avatars"
      >
        <div
          class="my-auto font-semibold"
        >
          <div
            class="absolute top-4 right-2 text-theme-primary-200"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="float-right outline-none cursor-pointer focus:outline-none"
              >
                <div
                  class="sc-AxirZ eEbZjj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mb-4 mr-4"
          >
            <svg
              class="w-12 h-12"
            >
              changenow-logo.svg
            </svg>
          </div>
          <div
            class="flex items-center mb-2 text-lg space-x-2 text-theme-primary-600"
          >
            <div>
              ARK Avatars
            </div>
            <div>
              <div
                class="sc-AxirZ eEbZjj"
                height="20"
                width="20"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex text-sm text-theme-neutral-400 space-x-4"
          >
            <div
              class="pr-4 border-r border-theme-neutral-300"
            >
              ARK.io
            </div>
            <div>
              <div
                class="flex"
                data-testid="ReviewRating"
              >
                <div
                  class="relative my-auto"
                >
                  <div
                    class="absolute overflow-hidden"
                    style="width: 70%;"
                  >
                    <svg
                      class="text-theme-warning-400 w-5"
                    >
                      star.svg
                    </svg>
                  </div>
                  <svg
                    class="text-theme-neutral-500 w-5"
                  >
                    star.svg
                  </svg>
                </div>
                <span
                  class="leading-tight my-auto ml-1 {{ $ratingClass ?? '' }}"
                >
                  3.8
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="sc-AxhCb gSLQTX mt-5"
      data-testid="Pagination"
    >
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__first"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ hDwaov"
          height="12"
          width="12"
        >
          <svg>
            pagination-first.svg
          </svg>
        </div>
      </button>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__previous"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ fttODj mr-2"
          height="10"
          width="10"
        >
          <svg>
            back.svg
          </svg>
        </div>
        Previous
      </button>
      <div
        class="flex px-2 rounded bg-theme-primary-contrast"
      >
        <div
          class="sc-AxhUy bxYQX current-page"
        >
          1
        </div>
      </div>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__next"
        disabled=""
        type="button"
      >
        Next
        <div
          class="sc-AxirZ hDwaov ml-2"
          height="12"
          width="12"
        >
          <svg>
            forward.svg
          </svg>
        </div>
      </button>
      <button
        class="sc-AxjAm ddJBbC"
        color="primary"
        data-testid="Pagination__last"
        disabled=""
        type="button"
      >
        <div
          class="sc-AxirZ hDwaov"
          height="12"
          width="12"
        >
          <svg>
            pagination-last.svg
          </svg>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
